# device-management

./: .gitignore  Makefile  README.md  device-management.code-workspace  docker-compose.yml  package-lock.json  package.json
.kiro/specs/multi-tenant-command-runner/: design.md  requirements.md  spec.json  tasks.md
backend/: .gitignore  README.md  log_config.json  pyproject.toml  template.yaml
backend/app/: auth.py  db.py  device.py  iot_client.py  main.py  requirements.txt
backend/app/routers/: admin.py  auth.py  commands.py  device_agent.py  devices.py  tasks.py
device/: .gitignore  README.md  command_runner.py  pyproject.toml  setup_aws_iot.sh  virtual_device.py
docs/: dev-guide.md  user-guide.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/src/: App.tsx  api.test.ts  api.ts  index.css  main.tsx  types.test.ts  types.ts
frontend/src/components/: AppHeader.stories.tsx  AppHeader.tsx  CommandPanel.tsx  CommandResult.tsx  DeviceList.stories.tsx  DeviceList.tsx  LoginForm.stories.tsx  LoginForm.tsx  StatusBadge.stories.tsx  StatusBadge.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/ui/: badge.stories.tsx  button.stories.tsx  card.stories.tsx  input.stories.tsx  sonner.tsx  textarea.stories.tsx
frontend/src/lib/: utils.test.ts
frontend/src/styles/: globals.css
infra/lib/: infra-stack.ts
scripts/: init-local.sh  seed-local.sh  setup-floci.sh
