[project]
name = "device-management-backend"
version = "0.1.0"
description = "Device Management API (FastAPI on Lambda)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "mangum>=0.17,<1.0",
    "boto3>=1.34",
    "pydantic>=2.0",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "botocore[crt]>=1.43.2",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.27",
    "httpx",
]

[tool.uv]
package = false
